--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,16 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="assets/adminAssets/plugins/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/adminAssets/css/style.min.css">
+
+
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/3.18.3/minified.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mammoth/1.0.4/mammoth.browser.min.js"></script>
+  <script src="assets/adminAssets/bundles/libscripts.bundle.js"></script>
+<script src="assets/adminAssets/bundles/vendorscripts.bundle.js"></script>
+
+<script src="assets/adminAssets/bundles/mainscripts.bundle.js"></script>
 </body>
 </html>
